--- a/ProjetoKPI/package.json
+++ b/ProjetoKPI/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "node-telegram-bot-api": "^0.30.0",
+    "nodemailer": "^6.3.0",
     "popper.js": "^1.15.0",
     "save": "^2.4.0",
     "sqlite3": "^4.0.9",
